Allow Vercel frontend domain origins in SecurityConfig CORS configuration